[package]
name = "rspkg"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[features]
default = ["fetch"]
fetch = ["reqwest"]

[dependencies]
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

