[package]
name = "rspkg-runtime"
version = "0.1.0"
authors = ["Riey <creeper844@gmail.com>"]
edition = "2018"

[[bin]]
name = "rspkg"
path = "src/main.rs"

[features]
default = []
fetch = ["reqwest", "serde", "serde_json"]

[dependencies]
wasmer = { version = "1", default-features = false, features = ["default-singlepass", "default-jit"] }
wasmer-wasi = "1"
dashmap = "4.0.2"
reqwest = { version = "0.11.3", default-features = false, features = ["rustls-tls", "blocking", "json"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
